--- a/7-module/4-task/index.html
+++ b/7-module/4-task/index.html
@@ -23,7 +23,7 @@
 
     holder.append(stepSlider.elem);
 
-    holder.addEventListener('slider-change', (event) => console.log(event));
+    holder.addEventListener('slider-change', (myEvent) => console.log(myEvent));
   </script>
 </body>
 
