--- a/9-module/2-task/index.html
+++ b/9-module/2-task/index.html
@@ -25,8 +25,7 @@
     <h1 class="heading logo">Bangkok Express</h1>
     <h3 class="subheading">Great food・Free delivery・Fair price</h3>
 
-    <div data-cart-icon-holder>
-    </div>
+    <div data-cart-icon-holder></div>
   </header>
 
   <main>
